# arix-splash

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  configure
src/: createDecodeParams.c  decode.c  function.h  getScreenSize.c  globalVars.h  interruptHandler.c  isFileExist.c  main.c  play.c  queryKernel.c  typedef.h
